fix: text-align in TokensPlaceholder

--- a/src/components/Wallet/Dashboard/Tokens/TokensPlaceholder/TokensPlaceholder.module.scss
+++ b/src/components/Wallet/Dashboard/Tokens/TokensPlaceholder/TokensPlaceholder.module.scss
@@ -12,6 +12,7 @@
     @include absolute-full-size;
     @include flex-center-center;
     flex-direction: column;
+    text-align: center;
     gap: 20px;
 
     svg {
